# smee

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  pre-commit.yaml
0.17.0/: 404.html  index.html  sitemap.xml
0.17.0/development/: index.html
0.17.0/examples/: index.html
0.17.0/examples/compute-energy/: index.html
0.17.0/examples/conformer-minimization/: index.html
0.17.0/examples/md-simulations/: index.html
0.17.0/examples/parameter-gradients/: index.html
0.17.0/reference/: index.html
0.17.0/reference/SUMMARY/: index.html
0.17.0/reference/converters/: index.html
0.17.0/reference/converters/openff/: index.html
0.17.0/reference/converters/openff/nonbonded/: index.html
0.17.0/reference/converters/openff/valence/: index.html
0.17.0/reference/converters/openmm/: index.html
0.17.0/reference/converters/openmm/nonbonded/: index.html
0.17.0/reference/converters/openmm/valence/: index.html
0.17.0/reference/geometry/: index.html
0.17.0/reference/mm/: index.html
0.17.0/reference/potentials/: index.html
0.17.0/reference/potentials/nonbonded/: index.html
0.17.0/reference/potentials/valence/: index.html
0.17.0/reference/utils/: index.html
0.17.0/search/: search_index.json
devtools/envs/: base.yaml
docs/: development.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/examples/: index.html
latest/examples/compute-energy/: index.html
latest/examples/conformer-minimization/: index.html
latest/examples/md-simulations/: index.html
latest/examples/parameter-gradients/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/converters/: index.html
latest/reference/converters/openff/: index.html
latest/reference/converters/openff/nonbonded/: index.html
latest/reference/converters/openff/valence/: index.html
latest/reference/converters/openmm/: index.html
latest/reference/converters/openmm/nonbonded/: index.html
latest/reference/converters/openmm/valence/: index.html
latest/reference/geometry/: index.html
latest/reference/mm/: index.html
latest/reference/potentials/: index.html
latest/reference/potentials/nonbonded/: index.html
latest/reference/potentials/valence/: index.html
latest/reference/utils/: index.html
latest/search/: search_index.json
smee/: _constants.py
smee/converters/openff/: _openff.py  nonbonded.py
smee/converters/openmm/: _ff.py  nonbonded.py
smee/mm/: _config.py  _fe.py  _reporters.py
smee/potentials/: multipole.py  nonbonded.py  valence.py
smee/tests/: conftest.py  test_utils.py  utils.py
smee/tests/convertors/openff/: test_nonbonded.py  test_openff.py
smee/tests/convertors/openmm/: test_ff.py  test_openmm.py
smee/tests/data/: PHAST-H2CNO-2.0.0.offxml  PHAST-H2CNO-nonpolar-2.0.0.offxml
smee/tests/potentials/: conftest.py  test_nonbonded.py  test_potentials.py  test_valence.py
