[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smee"
description = "Differentiably compute energies of molecules using SMIRNOFF force fields."
authors = [ {name = "Simon Boothroyd"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.packages.find]
include = ["smee*"]

[tool.setuptools_scm]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["C901","E402","E501"]
select = ["B","C","E","F","W","B9"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = ["**/tests/*", "smee/mm/_fe.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ = .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.pytest.ini_options]
markers = [
    "fe: run free energy regression tests",
]
addopts = "-m 'not fe'"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
smee = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"
pytorch = "*"
pip = "*"
openff-units = "*"
openff-toolkit-base = ">=0.9.2"
openff-interchange-base = ">=0.3.17"
nnpops = "*"
pydantic-units = "*"
networkx = "*"
pydantic = ">=2"
ambertools = "*"

[tool.pixi.feature.cu12]
platforms = ["linux-64"]

[tool.pixi.feature.cu12.system-requirements]
cuda = "12"

[tool.pixi.feature.cu12.dependencies]
cuda-version = "12.*"
pytorch-gpu = "*"

[tool.pixi.feature.mm.dependencies]
openmm = "*"
python-symengine = "*"
rdkit = "*"
packmol = "*"
numpy = "*"
msgpack-python = "*"

[tool.pixi.feature.fe.dependencies]
mdtraj = "*"
absolv = ">=1.0.1"

[tool.pixi.feature.examples.dependencies]
jupyter = "*"
nbconvert = "*"
nglview = "*"
smirnoff-plugins = ">=2025.09.0"

[tool.pixi.feature.dev.dependencies]
ambertools = "*"
scipy = "*"
setuptools_scm = ">=8"
pre-commit = "*"
ruff = "*"
nbqa = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
codecov = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-jupyter = "*"
mkdocstrings = "*"
mkdocstrings-python = ">=1.10.8"
griffe-pydantic = "*"
black = "*"
mike = "*"

[tool.pixi.environments]
default = { features = ["mm", "fe", "examples", "dev", "docs"] }
cu12 = { features = ["cu12", "mm", "fe", "examples", "dev", "docs"] }

[tool.pixi.tasks]
lint = "ruff check smee examples"
format = { cmd = "ruff format smee examples && ruff check --fix --select I smee examples" }
test = "pytest -v --cov=smee --cov-append --cov-report=xml --color=yes smee/tests/"
test-examples = "jupyter nbconvert --to notebook --execute examples/compute-energy.ipynb examples/conformer-minimization.ipynb examples/parameter-gradients.ipynb"
docs = "mkdocs build"
docs-serve = "mkdocs serve"
